fix overflow

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -20,7 +20,8 @@ body{
 }
 
 #app{
-    height: 100%
+    height: 100%;
+    overflow: hidden;
 }
 
 .rotate-180 {
